# swarm-inference

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  VISION.md  config.yaml  github_launch_roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
docs/: api.md  architecture.md  benchmarks.md  deployment.md
examples/: README.md  basic_client.py
kubernetes/: README.md  configmap.yaml  coordinator-deployment.yaml  dashboard-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  nodes-statefulset.yaml  pdb.yaml  rbac.yaml  services.yaml
scripts/: find_receive.py
src/: alerting.rs  audit.rs  auto_scaling.rs  benchmark.rs  checkpoint.rs  config.rs  coordinator.rs  cuda_matmul.ptx  dashboard.rs  erasure.rs  gpu.rs  kv_cache.rs  lib.rs  main.rs  matmul.wgsl  memory_pool.rs  metrics.rs  model.rs  network.rs  node.rs  numa.rs
tests/: alerting_tests.rs  chaos_tests.rs  end_to_end_tests.rs  integration_tests.rs  monitoring_tests.rs
