[package]
name = "swarm_inference"
version = "0.1.0"
edition = "2024"
authors = ["Tasuke Pochira <tasuke.pochira@example.com>"]
description = "A high-performance, distributed, and fault-tolerant AI inference protocol."
license = "Apache-2.0"
repository = "https://github.com/tasuke-pochira/swarm-inference"
homepage = "https://github.com/tasuke-pochira/swarm-inference"
keywords = ["ai", "inference", "distributed", "p2p", "swarm"]
categories = ["science", "network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
async-trait = "0.1"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
sysinfo = "0.30"
reed-solomon-erasure = "4.0"
wgpu = { version = "0.16", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
libc = "0.2"
rayon = "1.8"

cust = { version = "0.3.2", optional = true }
config = "0.15.21"
serde_yaml = "0.9.34"
kube = "3.0.1"
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
serde_json = "1.0"

[features]
cuda = ["cust"]

[dev-dependencies]
tempfile = "3.27.0"
